RESOLVED FIXED43542
[chromium] WidgetChromium does not need to notify the ChromeClient when it gets focused
https://bugs.webkit.org/show_bug.cgi?id=43542
Summary [chromium] WidgetChromium does not need to notify the ChromeClient when it ge...
Jay Civelli
Reported 2010-08-05 00:16:04 PDT
WidgetChromium notifies the ChromeClient (via the ChromiumBridge) of every setFocus call. This is called every time a new node gets focused and is not used. (There is a ChromeClient::focusedNodeChange() that notifies every time a new node gets focused.) Calls to window.focus()/blur() are directly passed to the ChromeClient in WebCore/Chrome.cpp. For these reasons WidgetChromium::setFocus() should not do anything and the corresponding code in ChromiumBridge should be cleaned.
Attachments
Initial patch (2.69 KB, patch)
2010-08-05 00:23 PDT, Jay Civelli
no flags
Jay Civelli
Comment 1 2010-08-05 00:23:13 PDT
Created attachment 63562 [details] Initial patch
Eric Seidel (no email)
Comment 2 2010-08-06 14:43:14 PDT
Comment on attachment 63562 [details] Initial patch Yay!
Eric Seidel (no email)
Comment 3 2010-08-07 21:48:06 PDT
Comment on attachment 63562 [details] Initial patch Clearing flags on attachment: 63562 Committed r64935: <http://trac.webkit.org/changeset/64935>
Eric Seidel (no email)
Comment 4 2010-08-07 21:48:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.