2010-08-07  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Eric Seidel.

        [Chromium] Remove unecessary focus code.
        https://bugs.webkit.org/show_bug.cgi?id=43542

        * platform/chromium/ChromiumBridge.h:
        * platform/chromium/WidgetChromium.cpp:
        (WebCore::Widget::setFocus):
2010-08-07  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Eric Seidel.

        Removed unecessary focus code.
        https://bugs.webkit.org/show_bug.cgi?id=43542

        * src/ChromiumBridge.cpp:

Canonical link: https://commits.webkit.org/55748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64935 268f45cc-cd09-0410-ab3c-d52691b4dbfc