WebCore/platform/chromium/ChromiumBridge.h
@@ -260,7 +260,6 @@ namespace WebCore {
 
         // Widget -------------------------------------------------------------
         static void widgetSetCursor(Widget*, const Cursor&);
-        static void widgetSetFocus(Widget*);
     };
 
 } // namespace WebCore
